# GLR

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
glr/: aabb_tree.cpp  aabb_tree.h  glr_inline.h  glr_typedefs.h  initialize.cpp  initialize.h  obb_tree.cpp  obb_tree.h  obj.cpp  obj.h  renderBase.cpp  renderBase.h  renderbase.cpp  renderbase.h  sceneViewer.cpp  sceneViewer.h  sceneViewer2D.cpp  sceneViewer2D.h  sceneviewer.cpp  sceneviewer.h  sceneviewer2d.cpp  sceneviewer2d.h  shader.cpp  shader.h  tex2Screen.cpp  tex2Screen.h  texture.cpp  texture.h
glr/shaders/: aabb.fs  aabb.fs.h  aabb.vs  aabb.vs.h  imgui.ini  sceneViewer.fs  sceneViewer.fs.h  sceneViewer.vs  sceneViewer.vs.h  sceneViewer2D.fs  sceneViewer2D.fs.h  sceneViewer2D.vs  sceneViewer2D.vs.h  sceneviewer.fs  sceneviewer.fs.h  sceneviewer.vs  sceneviewer.vs.h  sceneviewer2d.fs  sceneviewer2d.fs.h  sceneviewer2d.vs  sceneviewer2d.vs.h
glr/static_build/: glr_inline.h
